# clone

./: .env.example  .gitignore  PROJECT_OVERVIEW.md  README.md  main.py  pyproject.toml  requirements.txt  result.html  streamlit_app.py  test_all_images.py  test_similarity.py
.streamlit/: config.toml  secrets.toml.example
backend/: app.py  database.py  embedding_service.py  populate_db.py  test_all_images_results.json  test_api.py  test_connection.py  test_vectors.py
data/: README.md  product_metadata.json
docs/: API_REFERENCE.md  EMBEDDING_DECISION.md  PLAN.md  YOLO_VS_BASELINE_COMPARISON.md
frontend/: app.js  app.js.backup  index.html  result.html  result_style.css  styles.css
