[project]
name = "zabatda-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fashion-clip>=0.2.2",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "rembg>=2.0.68",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "ultralytics>=8.0.239",
    "ultralyticsplus>=0.1.0",
]
